--- a/week1/week1_quiz.html
+++ b/week1/week1_quiz.html
@@ -67,7 +67,8 @@ img {
 <h2>Question 1</h2>
 <p>Which of the following are steps in building a machine learning algorithm?</p>
 <ul>
-<li>Estimating parameters</li>
+<li>Estimating parameters<br />OR<br /></li>
+<li>Deciding on an algorithm.</li>
 </ul>
 </div>
 <div id="question-2" class="section level2">
