--- a/week1/week1_quiz.html
+++ b/week1/week1_quiz.html
@@ -89,7 +89,8 @@ img {
 <h2>Question 4</h2>
 <p>What are some common error rates for predicting binary variables (i.e. variables with two possible values like yes/no, disease/normal, clicked/didn’t click)?</p>
 <ul>
-<li>Sensitivity—-True Positive/(True Positive + False Negative)</li>
+<li>Sensitivity—-True Positive/(True Positive + False Negative)<br />OR<br /></li>
+<li>Specificity</li>
 </ul>
 </div>
 <div id="question-5" class="section level2">
